ingress-implementation-example/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hello-deployment

spec:
  replicas: 3

  selector:
    matchLabels:
      app: hello

  template:
    metadata:
      labels:
        app: hello

    spec:
      containers:
      - name: hello
        image: nginx
        ports:
        - containerPort: 80
