ingress-implementation-example/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: hello-ingress

spec:
  rules:
  - host: hello.local

    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: hello-service

            port:
              number: 80
